Try to fix footer overflow on mobile

--- a/app/assets/styles/pages/home/_reviews.scss
+++ b/app/assets/styles/pages/home/_reviews.scss
@@ -200,17 +200,31 @@
                 background: var(--color-primary);
                 border: 0.1rem solid var(--color-text);
                 border-radius: 50%;
-                width: 2rem;
-                height: 2rem;
+                width: 1.75rem;
+                height: 1.75rem;
+
+                svg {
+                    width: 1rem;
+                    height: auto
+                }
+
 
                 @include respond-to('breakpoint-576') {
                     width: 2.25rem;
                     height: 2.25rem;
+
+                    svg {
+                        width: 1.25rem;
+                    }
                 }
 
                 @include respond-to('breakpoint-768') {
                     width: 2.5rem;
                     height: 2.5rem;
+
+                    svg {
+                        width: 1.5rem;
+                    }
                 }
 
                 @include respond-to('breakpoint-1400') {
